src/blocks/rowlayout/editor.scss
/* ... */
.kt-remove-img.kt-cta-upload-btn {
    margin-left: 5px;
}

// Tabs
// .kt-inspect-tabs .components-button-group {
// 	margin-bottom: 1em;
// 	border:0;
// }
// Tab Controls
.edit-post-block-sidebar__panel .kt-inspect-tabs .components-panel__body {
	border-top:0;
	margin-top: 6px;
	margin-bottom: 0;
}
.edit-post-block-sidebar__panel .kt-inspect-tabs .components-panel__body:not(:last-child) {
    padding-bottom:0px
}
.kt-inspect-tabs {
	padding-top: 10px;
	.components-tab-panel__tabs {
		border-bottom: 4px solid #ddd;
		button {
			justify-content: center;
			background:transparent;
			border:0;
			border-bottom:4px solid transparent;
			padding: 6px 16px;
			margin-bottom: -4px;
			outline:0;
		}
		button.active-tab {
			border-bottom-color:#0085ba;
			color:#0085ba;
		}
	}
}
.kt-inspect-tabs.kt-gradient-tabs {
	padding-top: 0;
}
.kt-inspect-tabs.kt-gradient-tabs .components-tab-panel__tabs {
    margin-bottom: 15px;
}
.kt-inspect-tabs.kt-gradient-tabs .components-tab-panel__tabs button {
    background: transparent;
    border: 0;
    border: 1px solid #eee;
    border-bottom: 4px solid transparent;
    padding: 10px 16px 6px;
    margin-bottom: -4px;
    outline: 0;
    color: #575757;
    width: 50%;
    font-size: 14px;
    font-weight: bold;
}
.kt-inspect-tabs.kt-gradient-tabs .components-tab-panel__tabs button.active-tab {
    background: #0085ba;
    color: white;
}
// Button Groups
.components-button-group .kt-layout-btn{
    height: 42px;
    background: transparent;
    box-shadow: none;
    border: 1px solid #eee;
	padding: 2px;
	margin-right: 5px;
    margin-bottom: 5px;
}
.components-button-group .kt-layout-btn svg {
    width:72px;
    height:36px;
}
.kt-inspect-tabs {
	.components-button-group .kt-layout-btn:hover, .components-button-group .kt-layout-btn.is-primary, .components-button-group .kt-layout-btn.is-primary:hover, .components-button-group .kt-layout-btn:focus:not(:disabled):not([aria-disabled=true]) {
		border-color: #ddd;
		background:transparent;
		box-shadow:none;
	}
}


.kadence-inner-column-inner {
	border: 0 solid transparent;
}
// Nested Row Layout inside of row layout.
.wp-block-kadence-rowlayout .block-editor-block-list__layout {
	margin-left: 0;
	margin-right: 0;

	// This max-width is used to constrain the main editor column, it should not cascade into columns
	.block-editor-block-list__block {
		max-width: none !important;
	}
}

// When setting on center this keeps text from being aligned center.
.block-editor-block-list__block[data-align=center][data-type="kadence/rowlayout"] {
	text-align: inherit;
}
// .block-editor-block-list__block[data-type="kadence/column"] > .block-editor-block-contextual-toolbar {
//     top: 38px;
//     transform: translateY(-38px);
//     margin-left: -29px;
//     margin-right: -29px;
// }
// .block-editor-block-list__block[data-type="kadence/column"]>.block-editor-block-list__insertion-point {
//     top: 0;
//     margin-top: 0;
// }

// This block has flex container children. Flex container margins do not collapse: https://www.w3.org/TR/css-flexbox-1/#flex-containers.
// Therefore, let's at least not add any additional margins here.
// The goal is for the editor to look more like the front-end.
//.block-editor-block-list__layout .block-editor-block-list__block[data-type="kadence/rowlayout"] > .block-editor-block-list__block-edit,
.wp-block-kadence-rowlayout {
	display: flex;
	flex-direction: column;
	> .innerblocks-wrap {
		width: 100%;
		flex-grow: 1;
	}
}
.wp-block-kadence-rowlayout.kt-row-valign-middle>.innerblocks-wrap {
	align-content: center;
	> .wp-block-kadence-column {
		display: flex;
		flex-direction: column;
		justify-content: center;
	}
}
.wp-block-kadence-rowlayout.kt-row-valign-top>.innerblocks-wrap {
	align-content: start;
	> .wp-block-kadence-column {
		display: flex;
		flex-direction: column;
		justify-content: flex-start;
	}
}
.wp-block-kadence-rowlayout.kt-row-valign-bottom>.innerblocks-wrap {
	align-content: end;
	> .wp-block-kadence-column {
		display: flex;
		flex-direction: column;
		justify-content: flex-end;
	}
}
// Full height align middle.
.wp-block-kadence-rowlayout.kt-row-valign-top.kt-inner-column-height-full > .innerblocks-wrap > .wp-block-kadence-column > .kadence-inner-column-inner {
    display: flex;
	flex-direction: column;
	justify-content: flex-start;
	> * {
		width: 100%;
	}
}
.wp-block-kadence-rowlayout.kt-row-valign-middle.kt-inner-column-height-full > .innerblocks-wrap > .wp-block-kadence-column > .kadence-inner-column-inner {
    display: flex;
	flex-direction: column;
	justify-content: center;
	> * {
		width: 100%;
	}
}
.wp-block-kadence-rowlayout.kt-row-valign-bottom.kt-inner-column-height-full > .innerblocks-wrap > .wp-block-kadence-column > .kadence-inner-column-inner {
    display: flex;
	flex-direction: column;
	justify-content: flex-end;
	> * {
		width: 100%;
	}
}
// Section align overide.
.wp-block-kadence-rowlayout.kt-inner-column-height-full > .innerblocks-wrap > .wp-block-kadence-column > .kadence-inner-column-inner.kadence-inner-column-vertical-align-top {
	justify-content: flex-start;
}
.wp-block-kadence-rowlayout.kt-inner-column-height-full > .innerblocks-wrap > .wp-block-kadence-column > .kadence-inner-column-inner.kadence-inner-column-vertical-align-middle {
	justify-content: center;
}
.wp-block-kadence-rowlayout.kt-inner-column-height-full > .innerblocks-wrap > .wp-block-kadence-column > .kadence-inner-column-inner.kadence-inner-column-vertical-align-bottom {
	justify-content: flex-end;
}

.kt-row-has-bg > .innerblocks-wrap {
    padding-left: var(--global-kb-spacing-sm, 1.5rem);
    padding-right: var(--global-kb-spacing-sm, 1.5rem);
}
.block-editor-block-list__block[data-align="full"] > .is-block-content > .wp-block-kadence-rowlayout {
	padding-left: 46px;
    padding-right: 46px;
}
/* ... */

